# Ecommerce_Customer_Service

./: .gitignore  IMPLEMENTATION_PLAN.md  PROJECT_CONTEXT.md  PROJECT_VERSION_LEDGER.md  SESSION_HANDOFF.md  docker-compose.yml
customer-service-backend/: pyproject.toml
customer-service-backend/atguigu/: main.py
customer-service-backend/atguigu/api/: app.py  dependencies.py  schemas.py
customer-service-backend/atguigu/api/router/: chat_router.py
customer-service-backend/atguigu/chitchat/: handler.py  responder.py
customer-service-backend/atguigu/clarify/: responder.py
customer-service-backend/atguigu/config/: config.py
customer-service-backend/atguigu/domain/: contexts.py  messages.py  state.py
customer-service-backend/atguigu/engine/: builder.py  dialogue_engine.py
customer-service-backend/atguigu/engine/focus/: __init__.py  catalog.py  resolver.py  slot_handoff.py  text_switch.py
customer-service-backend/atguigu/infrastructure/: database.py  http.py  llm.py
customer-service-backend/atguigu/knowledge/: handler.py  intents.py  provider.py  registry.py  responder.py
customer-service-backend/atguigu/model/: dialogue_state_record.py
customer-service-backend/atguigu/plan/: planner.py  protocol_gate.py  read_only_resolver.py  turn_plan.py  turn_plan_normalizer.py  turn_validator.py
customer-service-backend/atguigu/prompt/: history_builder.py  loader.py
customer-service-backend/atguigu/repository/: dialogue_state_repository.py
customer-service-backend/atguigu/service/: dialogue_service.py
customer-service-backend/atguigu/task/: handler.py
(+554 files in other folders)
